--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -102,6 +102,7 @@ virtualenv==16.3.0
 virtualenv-clone==0.5.1
 wcwidth==0.1.8
 webencodings==0.5.1
+whitenoise ==5.2.0
 wrapt==1.11.2
 xlrd==1.2.0
 xlwt==1.3.0
